--- a/k8s/genomic-service/configmap.yaml
+++ b/k8s/genomic-service/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   DJANGO_DEBUG: "false"
   DJANGO_ALLOWED_HOSTS: "*"
-  MONGO_URI: "mongodb://genomic-mongodb:27017"
+  MONGO_URI: "mongodb://root:mongodbpassword@genomic-mongodb:27017/geno_sentinel_genomics?authSource=admin"
   MONGO_DB_NAME: "geno_sentinel_genomics"
   CLINICAL_SERVICE_BASE_URL: "http://clinical-service:3000/clinical"
 
