--- a/k8s/genomic-service/deployment.yaml
+++ b/k8s/genomic-service/deployment.yaml
@@ -65,7 +65,7 @@ spec:
             cpu: "500m"
         livenessProbe:
           httpGet:
-            path: /genes
+            path: /docs/
             port: 8001
           initialDelaySeconds: 40
           periodSeconds: 30
@@ -73,7 +73,7 @@ spec:
           failureThreshold: 3
         readinessProbe:
           httpGet:
-            path: /genes
+            path: /docs/
             port: 8001
           initialDelaySeconds: 10
           periodSeconds: 10
