--- a/k8s/genomic-service/configmap.yaml
+++ b/k8s/genomic-service/configmap.yaml
@@ -10,5 +10,5 @@ data:
   DJANGO_ALLOWED_HOSTS: "*"
   MONGO_URI: "mongodb://root:mongodbpassword@genomic-mongodb:27017/geno_sentinel_genomics?authSource=admin"
   MONGO_DB_NAME: "geno_sentinel_genomics"
-  CLINICAL_SERVICE_BASE_URL: "http://clinical-service:3000/clinical"
+  CLINICAL_SERVICE_BASE_URL: "http://clinical-service:3000"
 
